Update service descriptions and team section on index html

--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
                         <img class="img-fluid w-100 h-100" src="img/wifirouter.jpg" alt="Network Solutions">
                     </div>
                     <div class="d-flex flex-column bg-light p-4">
-                        <h5 class="mb-3">Network Solutions</h5>
-                        <p class="mb-3">Expert WiFi installation and network setup for optimal coverage and performance.</p>
+                        <h5 class="mb-3">Small office/home Wi-Fi installation</h5>
+                        <p class="mb-3">Expert WiFi installation and network setup for optimal coverage and performance everywhere.</p>
                         <a href="service.html#networking" class="btn btn-primary">Learn More</a>
                     </div>
                 </div>
@@ -222,11 +222,11 @@
                     <div class="overflow-hidden">
                         <img class="img-fluid w-100 h-100" src="img/Terminal-2.png" alt="Hikvision Fingerprint Access Control">
                     </div>
-                    <div class="d-flex flex-column bg-light p-4">
+                    <!-- <div class="d-flex flex-column bg-light p-4">
                         <h5 class="mb-3">Hikvision Fingerprint Access Control</h5>
                         <p class="mb-3">Professional selling and installation of Hikvision fingerprint access control for offices, schools and businesses for time attendance. Price: 246,000 RWF all included.</p>
                         <a href="contact.html" class="btn btn-primary">Learn More</a>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -268,26 +268,22 @@
     <!-- Fact End -->
 
 
-    <!-- Founder Start -->
+    <!-- Team Start -->
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center mx-auto mb-5 wow slideInUp" data-wow-delay="0.1s" style="max-width: 600px;">
-                <h1 class="text-primary mb-3">Our Founder</h1>
-                <p class="mb-4">Meet the visionary behind Alelabs Tech</p>
+                <h1 class="text-primary mb-3">Our Team</h1>
+                <p class="mb-4">Meet the visionaries behind Alelabs Tech</p>
             </div>
             <div class="row g-5 align-items-center">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <h6 class="text-secondary text-uppercase">Leadership</h6>
-                    <h1 class="mb-4">Felix ABIMANA URUMENESHA</h1>
-                    <p class="mb-4">Our founder brings years of experience in IT and networking solutions, leading Alelabs Tech with a vision to provide cutting-edge technology solutions to homes and businesses across Rwanda.</p>
-                    <p class="fw-medium text-primary"><i class="fa fa-check text-success me-3"></i>Expert in IT Infrastructure</p>
-                    <p class="fw-medium text-primary"><i class="fa fa-check text-success me-3"></i>Network Security Specialist</p>
+                    <h6 class="text-secondary text-uppercase">Networking Technicians</h6>
+                    <h1 class="mb-4">24/7 Availability</h1>
+                    <p class="mb-4">Our team brings years of experience in IT and networking solutions, leading Alelabs Tech with a vision to provide cutting-edge technology solutions to homes and businesses across Rwanda.</p>
+                    <p class="fw-medium text-primary"><i class="fa fa-check text-success me-3"></i>Experts in IT Infrastructure</p>
+                    <p class="fw-medium text-primary"><i class="fa fa-check text-success me-3"></i>Network Security Specialists</p>
                     <p class="fw-medium text-primary"><i class="fa fa-check text-success me-3"></i>Innovation-Driven Leadership</p>
-                    <div class="mt-4">
-                        <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="light" data-type="VERTICAL" data-vanity="felix-abimana-urumenesha-0524b4367" data-version="v1">
-                            <a class="badge-base__link LI-simple-link" href="https://rw.linkedin.com/in/felix-abimana-urumenesha-0524b4367?trk=profile-badge">Felix ABIMANA URUMENESHA</a>
-                        </div>
-                    </div>
+
                 </div>
                 <div class="col-lg-6 pt-4" style="min-height: 400px;">
                     <div class="position-relative h-100 wow fadeInUp" data-wow-delay="0.5s">
@@ -297,7 +293,7 @@
             </div>
         </div>
     </div>
-    <!-- Founder End -->
+    <!-- Team End -->
 
 
     <!-- Service Start -->
@@ -319,34 +315,34 @@
                             <div class="d-flex align-items-center justify-content-center border border-5 border-white mb-4" style="width: 75px; height: 75px;">
                                 <!-- <i class="fa fa-water fa-2x text-primary"></i> -->
                             </div>
-                            <h4 class="mb-3">CCTV isntallation</h4>
+                            <h4>CCTV isntallation</h4>
                             <p>This service is available for home, businesses, insitutions and any work place like Farms </p>
                             <p class="text-primary fw-medium"><i class="fa fa-check text-success me-2"></i>Quality Service</p>
                             <p class="text-primary fw-medium"><i class="fa fa-check text-success me-2"></i>Customer Satisfaction</p>
                             <p class="text-primary fw-medium"><i class="fa fa-check text-success me-2"></i>Support 24/7</p>
-                            <a href="" class="btn bg-white text-primary w-100 mt-2">Read More<i class="fa fa-arrow-right text-secondary ms-2"></i></a>
+                            <!-- <a href="" class="btn bg-white text-primary w-100 mt-2">Read More<i class="fa fa-arrow-right text-secondary ms-2"></i></a> -->
                         </div>
                         <div class="bg-light p-4">
                             <div class="d-flex align-items-center justify-content-center border border-5 border-white mb-4" style="width: 75px; height: 75px;">
                                 <i class="fa fa-toilet fa-2x text-primary"></i>
                             </div>
-                            <h4 class="mb-3">Internet connectivity</h4>
+                            <h4 >Internet connectivity</h4>
                             <p>Homes or business or instutions, We extend your internet to the fullest.</p>
                             <p class="text-primary fw-medium"><i class="fa fa-check text-success me-2"></i>Quality Service</p>
                             <p class="text-primary fw-medium"><i class="fa fa-check text-success me-2"></i>Customer Satisfaction</p>
                             <p class="text-primary fw-medium"><i class="fa fa-check text-success me-2"></i>Support 24/7</p>
-                            <a href="" class="btn bg-white text-primary w-100 mt-2">Read More<i class="fa fa-arrow-right text-secondary ms-2"></i></a>
+                            <!-- <a href="" class="btn bg-white text-primary w-100 mt-2">Read More<i class="fa fa-arrow-right text-secondary ms-2"></i></a> -->
                         </div>
                         <div class="bg-light p-4">
                             <div class="d-flex align-items-center justify-content-center border border-5 border-white mb-4" style="width: 75px; height: 75px;">
                                 <i class="fa fa-shower fa-2x text-primary"></i>
                             </div>
-                            <h4 class="mb-3">New computer lab rooms</h4>
+                            <h4 >New computer lab rooms</h4>
                             <p>We build computer lab setups and mantainance and consultation. </p>
                             <p class="text-primary fw-medium"><i class="fa fa-check text-success me-2"></i>Quality Service</p>
                             <p class="text-primary fw-medium"><i class="fa fa-check text-success me-2"></i>Customer Satisfaction</p>
                             <p class="text-primary fw-medium"><i class="fa fa-check text-success me-2"></i>Support 24/7</p>
-                            <a href="" class="btn bg-white text-primary w-100 mt-2">Read More<i class="fa fa-arrow-right text-secondary ms-2"></i></a>
+                            <!-- <a href="" class="btn bg-white text-primary w-100 mt-2">Read More<i class="fa fa-arrow-right text-secondary ms-2"></i></a> -->
                         </div>
                     </div>
                 </div>
