--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                             <i class="fa fa-phone-alt fa-2x text-primary"></i>
                         </div>
                         <div class="ms-3">
-                            <p class="fs-5 fw-medium mb-2 text-white">Emergency 24/7</p>
+                            <p class="fs-5 fw-medium mb-2 text-white">Call/Whatsapp 24/7</p>
                             <h3 class="m-0 text-secondary">+250788612171</h3>
                         </div>
                     </div>
@@ -296,60 +296,58 @@
     <!-- Team End -->
 
 
-    <!-- Service Start -->
-    <div class="container-fluid py-5 px-4 px-lg-0">
-        <div class="row g-0">
-            <div class="col-lg-3 d-none d-lg-flex">
-                <div class="d-flex align-items-center justify-content-center bg-primary w-100 h-100">
-                    <h1 class="display-3 text-white m-0" style="transform: rotate(-90deg);">8 Projects Completed</h1>
-                </div>
+   <!-- Service Start -->
+<div class="container-fluid py-5 px-4 px-lg-0">
+    <div class="row g-0">
+        <div class="col-lg-3 d-none d-lg-flex">
+            <div class="d-flex align-items-center justify-content-center bg-primary w-100 h-100">
+                <h1 class="display-3 text-white m-0" style="transform: rotate(-90deg);">8 Projects Completed</h1>
             </div>
-            <div class="col-md-12 col-lg-9">
-                <div class="ms-lg-5 ps-lg-5">
-                    <div class="text-center text-lg-start wow fadeInUp" data-wow-delay="0.1s">
-                        <h6 class="text-secondary text-uppercase">Our Services</h6>
-                        <h1 class="mb-5">Explore Our Services</h1>
+        </div>
+        <div class="col-md-12 col-lg-9">
+            <div class="ms-lg-5 ps-lg-5">
+                <div class="text-center text-lg-start wow fadeInUp" data-wow-delay="0.1s">
+                    <h6 class="text-secondary text-uppercase">Our Services</h6>
+                    <h1 class="mb-5">Explore Our Services</h1>
+                </div>
+                <div class="owl-carousel service-carousel position-relative wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="bg-light p-4">
+                        <div class="d-flex align-items-center justify-content-center border border-5 border-white mb-4" style="width: 75px; height: 75px;">
+                            <!-- Icon removed -->
+                        </div>
+                        <h4>CCTV Installation</h4>
+                        <p>This service is available for homes, businesses, institutions, and any workplace like farms.</p>
+                        <p class="text-primary fw-medium"><i class="fa fa-check text-success me-2"></i>Quality Service</p>
+                        <p class="text-primary fw-medium"><i class="fa fa-check text-success me-2"></i>Customer Satisfaction</p>
+                        <p class="text-primary fw-medium"><i class="fa fa-check text-success me-2"></i>Support 24/7</p>
                     </div>
-                    <div class="owl-carousel service-carousel position-relative wow fadeInUp" data-wow-delay="0.1s">
-                        <div class="bg-light p-4">
-                            <div class="d-flex align-items-center justify-content-center border border-5 border-white mb-4" style="width: 75px; height: 75px;">
-                                <!-- <i class="fa fa-water fa-2x text-primary"></i> -->
-                            </div>
-                            <h4>CCTV isntallation</h4>
-                            <p>This service is available for home, businesses, insitutions and any work place like Farms </p>
-                            <p class="text-primary fw-medium"><i class="fa fa-check text-success me-2"></i>Quality Service</p>
-                            <p class="text-primary fw-medium"><i class="fa fa-check text-success me-2"></i>Customer Satisfaction</p>
-                            <p class="text-primary fw-medium"><i class="fa fa-check text-success me-2"></i>Support 24/7</p>
-                            <!-- <a href="" class="btn bg-white text-primary w-100 mt-2">Read More<i class="fa fa-arrow-right text-secondary ms-2"></i></a> -->
+                    <div class="bg-light p-4">
+                        <div class="d-flex align-items-center justify-content-center border border-5 border-white mb-4" style="width: 75px; height: 75px;">
+                            <!-- Icon removed -->
                         </div>
-                        <div class="bg-light p-4">
-                            <div class="d-flex align-items-center justify-content-center border border-5 border-white mb-4" style="width: 75px; height: 75px;">
-                                <i class="fa fa-toilet fa-2x text-primary"></i>
-                            </div>
-                            <h4 >Internet connectivity</h4>
-                            <p>Homes or business or instutions, We extend your internet to the fullest.</p>
-                            <p class="text-primary fw-medium"><i class="fa fa-check text-success me-2"></i>Quality Service</p>
-                            <p class="text-primary fw-medium"><i class="fa fa-check text-success me-2"></i>Customer Satisfaction</p>
-                            <p class="text-primary fw-medium"><i class="fa fa-check text-success me-2"></i>Support 24/7</p>
-                            <!-- <a href="" class="btn bg-white text-primary w-100 mt-2">Read More<i class="fa fa-arrow-right text-secondary ms-2"></i></a> -->
+                        <h4>Internet Connectivity</h4>
+                        <p>Homes, businesses, or institutions – we extend your internet to the fullest.</p>
+                        <p class="text-primary fw-medium"><i class="fa fa-check text-success me-2"></i>Quality Service</p>
+                        <p class="text-primary fw-medium"><i class="fa fa-check text-success me-2"></i>Customer Satisfaction</p>
+                        <p class="text-primary fw-medium"><i class="fa fa-check text-success me-2"></i>Support 24/7</p>
+                    </div>
+                    <div class="bg-light p-4">
+                        <div class="d-flex align-items-center justify-content-center border border-5 border-white mb-4" style="width: 75px; height: 75px;">
+                            <!-- Icon removed -->
                         </div>
-                        <div class="bg-light p-4">
-                            <div class="d-flex align-items-center justify-content-center border border-5 border-white mb-4" style="width: 75px; height: 75px;">
-                                <i class="fa fa-shower fa-2x text-primary"></i>
-                            </div>
-                            <h4 >New computer lab rooms</h4>
-                            <p>We build computer lab setups and mantainance and consultation. </p>
-                            <p class="text-primary fw-medium"><i class="fa fa-check text-success me-2"></i>Quality Service</p>
-                            <p class="text-primary fw-medium"><i class="fa fa-check text-success me-2"></i>Customer Satisfaction</p>
-                            <p class="text-primary fw-medium"><i class="fa fa-check text-success me-2"></i>Support 24/7</p>
-                            <!-- <a href="" class="btn bg-white text-primary w-100 mt-2">Read More<i class="fa fa-arrow-right text-secondary ms-2"></i></a> -->
-                        </div>
+                        <h4>New Computer Lab Rooms</h4>
+                        <p>We build computer lab setups with maintenance and consultation.</p>
+                        <p class="text-primary fw-medium"><i class="fa fa-check text-success me-2"></i>Quality Service</p>
+                        <p class="text-primary fw-medium"><i class="fa fa-check text-success me-2"></i>Customer Satisfaction</p>
+                        <p class="text-primary fw-medium"><i class="fa fa-check text-success me-2"></i>Support 24/7</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <!-- Service End -->
+</div>
+<!-- Service End -->
+
 
 
     <!-- Booking Start -->
