updated again on services we give

--- a/index.html
+++ b/index.html
@@ -219,9 +219,9 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 service-item-top wow fadeInUp" data-wow-delay="0.7s">
-                    <div class="overflow-hidden">
+                    <!-- <div class="overflow-hidden">
                         <img class="img-fluid w-100 h-100" src="img/Terminal-2.png" alt="Hikvision Fingerprint Access Control">
-                    </div>
+                    </div> -->
                     <!-- <div class="d-flex flex-column bg-light p-4">
                         <h5 class="mb-3">Hikvision Fingerprint Access Control</h5>
                         <p class="mb-3">Professional selling and installation of Hikvision fingerprint access control for offices, schools and businesses for time attendance. Price: 246,000 RWF all included.</p>
@@ -316,7 +316,7 @@
                             <!-- Icon removed -->
                         </div>
                         <h4>CCTV Installation</h4>
-                        <p>This service is available for homes, businesses, institutions, and any workplace like farms.</p>
+                        <p>This service is available for homes, businesses, institutions and workplaces.</p>
                         <p class="text-primary fw-medium"><i class="fa fa-check text-success me-2"></i>Quality Service</p>
                         <p class="text-primary fw-medium"><i class="fa fa-check text-success me-2"></i>Customer Satisfaction</p>
                         <p class="text-primary fw-medium"><i class="fa fa-check text-success me-2"></i>Support 24/7</p>
