Updating the hikvision access control
Removed price information from the description paragraph.

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-8">
                                 <h1 class="display-3 text-white animated slideInDown mb-4">Hikvision Fingerprint Access Control 2025</h1>
-                                <p class="fs-5 fw-medium text-white mb-4 pb-2">Professional selling and installation of Hikvision fingerprint access control for offices, schools and businesses for time attendance. Price: 246,000 RWF all included.</p>
+                                <p class="fs-5 fw-medium text-white mb-4 pb-2">Professional selling and installation of Hikvision fingerprint access control for offices, schools and businesses for time attendance.</p>
                                 <a href="contact.html" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Learn More</a>
                                 <a href="contact.html" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">Get Quote</a>
                             </div>
