--- a/checkout.html
+++ b/checkout.html
@@ -127,7 +127,7 @@
                     <h4 class="text-light mb-4">Address</h4>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Gisozi Gasabo, Kigali, RWANDA</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+250795884120</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>customers@alelabs.tech</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>alelabshq@gmail.com</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
