--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="col-lg-8 col-md-12 text-end">
                 <div class="h-100 d-inline-flex align-items-center me-4">
                     <i class="fa fa-map-marker-alt text-primary me-2"></i>
-                    <p class="m-0">Gisozi, Gasabo, RWANDA</p>
+                    <p class="m-0">Rwanda, Client visits & on-site work</p>
                 </div>
                 <div class="h-100 d-inline-flex align-items-center">
                     <i class="fa fa-phone-alt text-primary me-2"></i>
@@ -461,7 +461,7 @@
             <div class="copyright">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a class="border-bottom" href="#">Alelabs | Networking solutions anywhere & anytime. </a>, All Right Reserved.
+                        &copy; <a class="border-bottom" href="#">Alelabs | Networking solutions anywhere & anytime. </a>, Client visits & on-site work.
                     </div>
                     <div class="col-md-6 text-center text-md-end">
                         <!--/*** This template is free as long as you keep the footer author's credit link/attribution link/backlink. If you'd like to use the template without the footer author's credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
