Updated the homepage welcome message

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="row align-items-center top-bar">
             <div class="col-lg-4 col-md-12 text-center text-lg-start">
                 <a href="" class="navbar-brand m-0 p-0">
-                    <h1 class="text-primary m-0">Alelabs.tech</h1>
+                    <h1 class="text-primary m-0">Client visits & on-site work.</h1>
                 </a>
             </div>
             <div class="col-lg-8 col-md-12 text-end">
