update some stuufs 1

--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
         <div class="row align-items-center top-bar">
             <div class="col-lg-4 col-md-12 text-center text-lg-start">
                 <a href="" class="navbar-brand m-0 p-0">
-                    <h1 class="text-primary m-0">Alelabs.tech</h1>
+                    <h1 class="text-primary m-0">client visits & on-site work</h1>
                 </a>
             </div>
             <div class="col-lg-8 col-md-12 text-end">
@@ -151,7 +151,7 @@
                                 </div>
                                 <div class="ms-3">
                                     <h5 class="text-primary">Email Us</h5>
-                                    <p class="mb-0">info@alelabs.tech</p>
+                                    <p class="mb-0">alelabshq@gmail.com</p>
                                 </div>
                             </div>
                             <div class="d-flex">
@@ -160,7 +160,7 @@
                                 </div>
                                 <div class="ms-3">
                                     <h5 class="text-primary">Working Hours</h5>
-                                    <p class="mb-0">Monday - Sunday: 8:00 AM - 7:00 PM</p>
+                                    <p class="mb-0">Monday - Saturday: 8:00 AM - 7:00 PM</p>
                                 </div>
                             </div>
                         </div>
@@ -197,9 +197,9 @@
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-light mb-4">Address</h4>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Gisozi Gasabo, Kigali, RWANDA</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Gisozi-Gasabo, Kigali, RWANDA</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+250788612171</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@alelabs.tech</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>alelabshq@gmail.com</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
@@ -281,7 +281,7 @@
                 'Phone: ' + phone + '\n' +
                 'Question: ' + question
             );
-            window.location.href = `mailto:info@alelabs.tech?subject=${subject}&body=${body}`;
+            window.location.href = `mailto:alelabshq@gmail.com?subject=${subject}&body=${body}`;
         });
         document.getElementById('ask-whatsapp-btn').addEventListener('click', function() {
             const form = document.getElementById('ask-question-form');
