--- a/service.html
+++ b/service.html
@@ -153,18 +153,6 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.7s" id="website">
-                    <div class="service-item bg-light rounded">
-                        <div class="overflow-hidden">
-                            <img class="img-fluid w-100" src="img/webdev.png" alt="Website Maintenance & Development">
-                        </div>
-                        <div class="p-4">
-                            <h4 class="mb-3">Free IT Help & Consultation</h4>
-                            <p>Our goal is to help you solve technical problems, optimize your systems, and make informed IT decisions..</p>
-                            <a href="service-website.html" class="btn btn-primary">Learn More</a>
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
     </div>
@@ -215,10 +203,9 @@
                                 <div class="col-12">
                                     <select name="service" class="form-select border-0" style="height: 55px;" required>
                                         <option value="">Select A Service</option>
-                                        <option value="CCTV Installation">CCTV Installation</option>
+                                        <option value="CCTV Installation">Camera Installation</option>
                                         <option value="Network Solutions">Network Solutions</option>
-                                        <option value="Computer Lab Setup">Computer Lab Setup</option>
-                                        <option value="Website Maintenance & Development">Website Maintenance & Development</option>
+                                        <option value="Computer Lab Setup">Computer Labs</option>
                                     </select>
                                 </div>
                                 <div class="col-12">
