--- a/education.html
+++ b/education.html
@@ -180,7 +180,7 @@
     <div class="container-xxl py-5 bg-white">
         <div class="container">
             <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
-                <h1 class="text-primary mb-3">Our Education Solutions in Action</h1>
+                <h1 class="text-primary mb-3">Coming Soon...</h1>
                 <p class="mb-5">See how we're transforming education through technology and innovation.</p>
             </div>
             <div class="row g-4">
