--- a/products.html
+++ b/products.html
@@ -121,7 +121,7 @@
     <!-- Navbar End -->
     <!-- Main Content: Shop -->
     <div class="container py-5">
-        <h1 class="text-center mb-3 text-primary">Shop Products</h1>
+        <h1 class="text-center mb-3 text-primary">Coming Soon...</h1>
         <div class="row mb-3">
             <div class="col-md-8 offset-md-2 text-center">
                 <div id="category-filters" class="btn-group" role="group">
